# analytics_todo

./: .pre-commit-config.yaml  docker-compose-kafka.yaml  docker-compose.yaml  kafka_consumer.py  main.py  pyproject.toml  settings.py
.github/workflows/: tests.yaml
app/: database.py  exceptions.py  routers.py  schemas.py  services.py  utils.py
database/: repositories.py  session.py
tests/: conftest.py  test_endpoints.py
